--- a/css/estilos-precios.css
+++ b/css/estilos-precios.css
@@ -7,58 +7,78 @@ body{
     font-family: 'Montserrat', sans-serif;
     background: linear-gradient(violet,red,orange,yellow,white);
 }
-.Header{
-    width: 100%;
-    height: 15%;
-    min-height: 5%;
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 1fr;
+    grid-template-rows: 0.2fr 0.2fr 4.22fr 1fr;
+}
+header{
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    grid-column: 1/5;
+    grid-row: 1/2;
 }
-.nav{
-    height: 5%;
-    width: 100%;
-    font-size: 30px;
-}
-.aindex{
-    color: black;
-    text-decoration: underline;
-}
-.aprecios{
-    color: black;
-    text-decoration:underline;
+nav{
+    grid-column: 1/5;
+    grid-row: 2/3;
 }
 .tabla1{
     text-align: center;
-    height: 50%;
-    width: 30%;
-    border: 4px solid black;
+    border-collapse: separate;
+    border: black 5px solid;
     border-radius: 3px;
-    float: left;
-    margin-left: 20%;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    margin: 5px;
 }
 .tabla2{
     text-align: center;
-    height: 25%;
-    width: 30%;
-    border: 4px solid black;
+    border: black 5px solid;
+    border-collapse: separate;
     border-radius: 3px;
-    float: right;
-    margin-right: 20%;
+    grid-column: 3/4;
+    grid-row: 3/4;
+    margin: 5px;
+    margin-bottom: 50%;
 }
-.Footer{
-    float: left;
-    width: 65%;
-    height: 25%;
+footer{
     background-color: #77DD77;
     font-size: 25px;
-    margin-top: 2.5%;
+    grid-column: 1/4;
+    grid-row: 4/5;
 }
 .mapa{
-    float: right;
-    width: 35%;
-    height: 25%;
     background-size: cover;
-    margin-top: 2.5%;
+    grid-column: 4/5;
+    grid-row: 4/5;
+}
+
+@media only screen and (max-width: 540px){
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 0.2fr 4.22fr 4.22fr 0.1fr 1fr;
+    }
+    header{
+        grid-column: 1/2;
+    }
+    nav{
+        grid-column: 1/2;
+    }
+    .tabla1{
+        grid-column: 1/2;
+    }
+    .tabla2{
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+    .mapa{
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+    footer{
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
 }
