--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,16 +23,7 @@ header{
 nav{
     grid-area: nav;
 }
-.aindex{
-    color: black;
-    text-decoration: underline;
-}
-.aprecios{
-    color: black;
-    text-decoration:underline;
-}
 .Muestra{
-    float: left;
     background-size: cover;
     background-color: white;
     grid-area: muestra;
@@ -49,38 +40,47 @@ nav{
 .img1{
     background-image:url(img/trozado.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img2{
     background-image:url(img/patamuslo.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img3{
     background-image:url(img/polloentero.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img4{
     background-image:url(img/pechuga.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img5{
     background-image:url(img/pechugadeshuesada.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img6{
     background-image:url(img/bife.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img7{
     background-image:url(img/milanesa.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img8{
     background-image:url(img/albondiga.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .img9{
     background-image:url(img/arrollado.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .Detalle{
     border-radius: 15px;
@@ -102,4 +102,23 @@ footer{
 .mapa{
     background-size: cover;
     grid-area: mapa;
+}
+@media only screen and (max-width: 540px){
+    .grid-container{
+        display: grid;
+        grid-template-areas: 'header header'
+                             'nav nav'
+                             'muestra muestra' 
+                             'detalle detalle'
+                             'mapa mapa'
+                             'footer footer';
+    }
+    .Muestra{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 0.2fr 1fr 1fr 1fr 1fr 1fr;
+    }
+    .Productos{
+        grid-column: 1/3;
+    }
 }
