--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,8 +10,8 @@ body{
     display: grid;
     grid-template-areas: 'header header header header header'
                          'nav nav nav nav nav'
-                         'muestra muestra detalle detalle detalle'
-                         'footer footer footer mapa mapa';
+                         'muestra detalle detalle detalle detalle'
+                         'footer footer footer footer mapa';
 }
 header{
     display: flex;
@@ -25,62 +25,25 @@ nav{
 }
 .Muestra{
     background-size: cover;
-    background-color: white;
+    background-color: black;
     grid-area: muestra;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 2fr 2fr 2fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 2fr;
     row-gap: -20px;
 }
 .Productos{
     display: inline-block;
     background-color: lightblue;
-    grid-column: 1/4;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
-.img1{
-    background-image:url(img/trozado.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+h5{
+    color: black;
 }
-.img2{
-    background-image:url(img/patamuslo.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img3{
-    background-image:url(img/polloentero.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img4{
-    background-image:url(img/pechuga.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img5{
-    background-image:url(img/pechugadeshuesada.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img6{
-    background-image:url(img/bife.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img7{
-    background-image:url(img/milanesa.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img8{
-    background-image:url(img/albondiga.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.img9{
-    background-image:url(img/arrollado.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+.carouselExampleIndicators{
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 .Detalle{
     border-radius: 15px;
@@ -106,19 +69,11 @@ footer{
 @media only screen and (max-width: 540px){
     .grid-container{
         display: grid;
-        grid-template-areas: 'header header'
-                             'nav nav'
-                             'muestra muestra' 
-                             'detalle detalle'
-                             'mapa mapa'
-                             'footer footer';
-    }
-    .Muestra{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 0.2fr 1fr 1fr 1fr 1fr 1fr;
-    }
-    .Productos{
-        grid-column: 1/3;
+        grid-template-areas: 'header'
+                             'nav'
+                             'muestra' 
+                             'detalle'
+                             'mapa'
+                             'footer';
     }
 }
