--- a/css/estilos-precios.css
+++ b/css/estilos-precios.css
@@ -9,7 +9,7 @@ body{
 }
 .grid-container{
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr 1fr;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
     grid-template-rows: 0.2fr 0.2fr 4.22fr 1fr;
 }
 header{
@@ -30,7 +30,7 @@ nav{
     border-radius: 3px;
     grid-column: 2/3;
     grid-row: 3/4;
-    margin: 5px;
+    margin: 10px;
 }
 .tabla2{
     text-align: center;
@@ -39,8 +39,7 @@ nav{
     border-radius: 3px;
     grid-column: 3/4;
     grid-row: 3/4;
-    margin: 5px;
-    margin-bottom: 50%;
+    margin: 10px;
 }
 footer{
     background-color: #77DD77;
@@ -57,28 +56,32 @@ footer{
 @media only screen and (max-width: 540px){
     .grid-container{
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: 0.2fr 0.2fr 4.22fr 4.22fr 0.1fr 1fr;
     }
     header{
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
     nav{
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
     .tabla1{
-        grid-column: 1/2;
+        grid-column: 1/3;
+        margin-left: 10px !important;
+        margin-right: 10px !important;
     }
     .tabla2{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 4/5;
+        margin-left: 10px !important;
+        margin-right: 10px !important;
     }
     .mapa{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 5/6;
     }
     footer{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 6/7;
     }
 }
