--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,79 +1,87 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-body{
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(violet,red,orange,yellow,white);
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(violet, red, orange, yellow, white);
 }
-.grid-container{
+
+.grid-container {
+  display: grid;
+  grid-template-areas: "header header header header header" "nav nav nav nav nav" "muestra detalle detalle detalle detalle" "footer footer footer footer mapa";
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: underline;
+  grid-area: header;
+}
+
+nav {
+  grid-area: nav;
+}
+
+.Muestra {
+  background-size: cover;
+  background-color: black;
+  grid-area: muestra;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.2fr 2fr;
+  row-gap: -20px;
+}
+
+.Productos {
+  display: inline-block;
+  background-color: lightblue;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+h5 {
+  color: black;
+}
+
+.carouselExampleIndicators {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+.Detalle {
+  border-radius: 15px;
+  border: black solid;
+  font-size: 20px;
+  grid-area: detalle;
+}
+
+ol {
+  margin-left: 5%;
+}
+
+ul {
+  margin-left: 5%;
+}
+
+footer {
+  background-color: #77DD77;
+  font-size: 25px;
+  grid-area: footer;
+}
+
+.mapa {
+  background-size: cover;
+  grid-area: mapa;
+}
+
+@media only screen and (max-width: 540px) {
+  .grid-container {
     display: grid;
-    grid-template-areas: 'header header header header header'
-                         'nav nav nav nav nav'
-                         'muestra detalle detalle detalle detalle'
-                         'footer footer footer footer mapa';
+    grid-template-areas: "header" "nav" "detalle" "muestra" "mapa" "footer";
+  }
 }
-header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: underline;
-    grid-area: header;
-}
-nav{
-    grid-area: nav;
-}
-.Muestra{
-    background-size: cover;
-    background-color: black;
-    grid-area: muestra;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 2fr;
-    row-gap: -20px;
-}
-.Productos{
-    display: inline-block;
-    background-color: lightblue;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-h5{
-    color: black;
-}
-.carouselExampleIndicators{
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-.Detalle{
-    border-radius: 15px;
-    border: black solid;
-    font-size: 20px;
-    grid-area: detalle;
-}
-ol{
-    margin-left: 5%;
-}
-ul{
-    margin-left: 5%;
-}
-footer{
-    background-color: #77DD77;
-    font-size: 25px;
-    grid-area: footer;
-}
-.mapa{
-    background-size: cover;
-    grid-area: mapa;
-}
-@media only screen and (max-width: 540px){
-    .grid-container{
-        display: grid;
-        grid-template-areas: 'header'
-                             'nav'
-                             'detalle' 
-                             'muestra'
-                             'mapa'
-                             'footer';
-    }
-}
+
+/*# sourceMappingURL=estilos.css.map */
