--- a/css/estilos-precios.css
+++ b/css/estilos-precios.css
@@ -35,6 +35,7 @@ nav {
   margin: 10px;
   grid-column: 2/3;
   grid-row: 3/4;
+  scale: 1;
 }
 
 .tabla2 {
@@ -45,14 +46,6 @@ nav {
   margin: 10px;
   grid-column: 3/4;
   grid-row: 3/4;
-}
-
-.zoom {
-  transition: transform 1s;
-}
-
-.zoom:hover {
-  transform: scale(1.5);
 }
 
 footer {
@@ -66,6 +59,11 @@ footer {
   background-size: cover;
   grid-column: 4/5;
   grid-row: 4/5;
+  transition: transform 2s;
+}
+
+.zoom:hover {
+  transform: scale(1.5);
 }
 
 @media only screen and (max-width: 540px) {
