--- a/css/estilos-precios.scss
+++ b/css/estilos-precios.scss
@@ -38,18 +38,12 @@ nav {
 	@include Generacion-Tabla();
     grid-column: 2/3;
 	grid-row: 3/4;
-
+    scale: 1;
 }
 .tabla2 {
     @include Generacion-Tabla();
     grid-column: 3/4;
 	grid-row: 3/4;
-}
-.zoom{
-    transition: transform 1s;
-}
-.zoom:hover{
-    transform: scale(1.5);
 }
 footer {
 	background-color: $background-color_1;
@@ -57,10 +51,15 @@ footer {
 	grid-column: 1/4;
 	grid-row: 4/5;
 }
+
 .mapa {
 	background-size: cover;
 	grid-column: 4/5;
 	grid-row: 4/5;
+    transition: transform 2s;
+}
+.zoom:hover{
+    transform:scale(1.5);
 }
 @media only screen and (max-width: 540px) {
 	.grid-container {
