--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -71,6 +71,10 @@ footer {
 .mapa {
 	background-size: cover;
 	grid-area: mapa;
+    transition: transform 2s;
+}
+.zoom:hover{
+    transform:scale(1.5);
 }
 @media only screen and (max-width: 540px) {
 	.grid-container {
