--- a/css/estilos-precios.css
+++ b/css/estilos-precios.css
@@ -46,6 +46,11 @@ nav {
   margin: 10px;
   grid-column: 3/4;
   grid-row: 3/4;
+  transition: transform 2s;
+}
+
+.tabla2:hover {
+  transform: scale(1.5);
 }
 
 footer {
