--- a/css/estilos-precios.scss
+++ b/css/estilos-precios.scss
@@ -44,6 +44,10 @@ nav {
     @include Generacion-Tabla();
     grid-column: 3/4;
 	grid-row: 3/4;
+    transition: transform 2s;
+}
+.tabla2:hover{
+    transform: scale(1.5);
 }
 footer {
 	background-color: $background-color_1;
@@ -51,7 +55,6 @@ footer {
 	grid-column: 1/4;
 	grid-row: 4/5;
 }
-
 .mapa {
 	background-size: cover;
 	grid-column: 4/5;
