--- a/css/estilos-precios.scss
+++ b/css/estilos-precios.scss
@@ -73,14 +73,14 @@ footer {
 	}
 	.tabla1 {
 		grid-column: 1/3;
-		margin-left: 10px !important;
-		margin-right: 10px !important;
+		margin-left: 10px;
+		margin-right: 10px;
 	}
 	.tabla2 {
 		grid-column: 1/3;
 		grid-row: 4/5;
-		margin-left: 10px !important;
-		margin-right: 10px !important;
+		margin-left: 10px;
+		margin-right: 10px;
 		margin-bottom: 0;
 	}
 	.mapa {
