--- a/css/estilos-precios.scss
+++ b/css/estilos-precios.scss
@@ -54,7 +54,7 @@ footer {
 	grid-row: 4/5;
     transition: transform 2s;
 }
-.zoom:hover{
+.mapa:hover{
     transform:scale(1.5);
 }
 @media only screen and (max-width: 480px) {
