--- a/css/estilos-precios.css
+++ b/css/estilos-precios.css
@@ -61,11 +61,11 @@ footer {
   transition: transform 2s;
 }
 
-.zoom:hover {
+.mapa:hover {
   transform: scale(1.5);
 }
 
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 480px) {
   .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -79,14 +79,14 @@ footer {
   }
   .tabla1 {
     grid-column: 1/3;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .tabla2 {
     grid-column: 1/3;
     grid-row: 4/5;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 0;
   }
   .mapa {
