--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -73,7 +73,7 @@ footer {
 	grid-area: mapa;
     transition: transform 2s;
 }
-.zoom:hover{
+.mapa:hover{
     transform:scale(1.5);
 }
 @media only screen and (max-width: 480px) {
