--- a/css/estilos-precios.css
+++ b/css/estilos-precios.css
@@ -65,7 +65,7 @@ footer {
   transform: scale(1.5);
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 540px) {
   .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -73,12 +73,15 @@ footer {
   }
   header {
     grid-column: 1/3;
+    grid-row: 1/2;
   }
   nav {
     grid-column: 1/3;
+    grid-row: 2/3;
   }
   .tabla1 {
     grid-column: 1/3;
+    grid-row: 3/4;
     margin-left: 10px;
     margin-right: 10px;
   }
