--- a/css/estilos-precios.scss
+++ b/css/estilos-precios.scss
@@ -14,7 +14,7 @@ $background-color_1: #77DD77;
 }
 body {
 	font-family: $font-family_1;
-	background: linear-gradient(violet,red,orange,yellow,white);
+	background: linear-gradient(#FF9B9B,#FFD6A5,#FFFEC4,#CBFFA9);
 }
 .grid-container {
 	display: grid;
